--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -81,6 +81,8 @@ The starting point of the design concept is to determine what type of processing
 
 \input{1Chapters/1Preanalysis/TechnicalAnalysis_Limiter.tex}
 
+\input{1Chapters/1Preanalysis/TechnicalAnalysis_AVC.tex}
+
 %\input{1Chapters/1Preanalysis/TechnicalAnalysis_Sensor.tex}
 
 \input{1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex}
