--- a/Rapport/00setup/glossaries.tex
+++ b/Rapport/00setup/glossaries.tex
@@ -77,6 +77,7 @@
 \newacronym{I2S}{I$^2$S}{Inter-IC sound}
 \newacronym{DSP}{DSP}{Digital Signal Processor}
 \newacronym{FPGA}{FPGA}{Field Programmable Gate Array}
+\newacronym{AVC}{AVC}{Automatic volume control}
 
 
 
