skrevet lidt til overview

--- a/Rapport/1Chapters/2Requirements/Overview.tex
+++ b/Rapport/1Chapters/2Requirements/Overview.tex
@@ -1,5 +1,5 @@
 \chapter{Overview} \label{ch:overview}
-This chapter will describe a of the sytem before the requirements of the system is set up. A overview of the system can be seen on \autoref{fig:SystemOverview} which shows a feedback system which regulates \textbf{TBD} the volume of the sub bass based on the \textbf{TBD} model, seen on \textbf{figure TBD}, of the second and third harmonic relative to keynote. Besides the feedback system a user controlled equalizer should also be part of the system to give the user more flexibility.            
+This chapter will describe an overview of the system before the needed requirements of the system is set up. A graphical overview of the system can be seen on \autoref{fig:SystemOverview} which shows a feedback system which will regulate the volume of the lower frequency based on the \textbf{TBD} model, seen on \textbf{figure TBD}, comparing the second and third harmonic relative to keynote. Besides the feed forward system a user controlled equalizer should also be part of the system to give the user more flexibility. The following chapter describes the individual blocks in more detail.          
 
 \begin{figure}[H]
 \centering
@@ -12,7 +12,7 @@ This chapter will describe a of the sytem before the requirements of the system 
 A more detailed description of every block will now follow.
 
 \textbf{Audio source} \\
-The audio source will in this project be an analog line input. 
+The audio source will in this project be an analog line input. IEC 60268-15
 
 \textbf{User} \\
 The user of the system will both be an commercial user and a developer as described in \autoref{sec:user_interface}. 
