--- a/Rapport/figures/SystemOverview.tex
+++ b/Rapport/figures/SystemOverview.tex
@@ -11,7 +11,7 @@
 
 \node [block, fill=gray,text=white] (Limiter) at ($(Delay)+(6.5,0)$) {Limiter};
 
-\node [Twolineblock, fill=white] (AmplitudeDetect) at ($(Delay)+(0,-2)$) {Amplitude Detection};
+\node [Twolineblock, fill=white] (AmplitudeDetect) at ($(Delay)+(0,-2)$) {Decision and Model};
 
 \node [Twolineblock, fill=white] (NewEQ) at ($(Delay)+(3.25,0)$) {Auto Equalizer};
 
