--- a/Rapport/1Chapters/1Preanalysis/signal_anal.tex
+++ b/Rapport/1Chapters/1Preanalysis/signal_anal.tex
@@ -18,7 +18,7 @@ V_{\text{RMS}}(t) = \sqrt{\frac{1}{T}\int_0^T v(t)^2 dt}
 \end{equation}
 The definition of the RMS in \autoref{eq:RMS_con} is only defined for continuous signals. If the RMS value is to be calculated for discrete values then following equation is used:
 \begin{equation}
-V_{\text{RMS}}[n] = \sqrt{\frac{1}{N}\sum_{k=1}^{N} v[n-k]^2 dt}
+V_{\text{RMS}}[n] = \sqrt{\frac{1}{N}\sum_{k=1}^{N} v[n-k]^2}
 \end{equation}
 The RMS can be useful to estimate the power of the signal. For instance if the RMS value of the signal moves above a certain threshold, the system may warn that the signal will stress the loudspeaker too much.
 
