--- a/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
+++ b/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
@@ -1,6 +1,6 @@
 \section{Real-time Signal Processing System}
 
-It is important to clarify if the processing system is going to be designed as an analog or digital system. Both types have its own advantages and disadvantages and one of the purposes this section is thus to determine which platform will suit the system most. A brief analysis on the advantages and disadvantages of both system are therefore provided. 
+It is important to clarify if the processing system is going to be designed as an analog or digital system. Both types have its own advantages and disadvantages and one of the purposes of this section is thus to determine which platform will suit the system most. A brief analysis on the advantages and disadvantages of both system are therefore provided. 
 
 Briefly, the main difference between an analog and digital system is that the analog system works in continuous-time while the digital system works in discrete-time. For a continuous-time system values of a continuous signal, at any given time, is defined. For a discrete-time system, values of a signal are only defined at specific points in time with a fixed resolution. The time difference between each points is defined through defined sampling period $T_s$ and the resolution of each point is defined by the resolution of the Analog-to-Digital Converter (ADC). By using a digital system, some information of the signal is necessarily lost, since there will be points in time where the signal is not defined.
 
