--- a/Rapport/1Chapters/1Preanalysis/signal_anal.tex
+++ b/Rapport/1Chapters/1Preanalysis/signal_anal.tex
@@ -28,7 +28,7 @@ Using a spectrum analyser as a part of the signal analysis may be useful since t
 
 
 \subsection{Choice of signal analysis}
-
+It has been chosen that the overall signal analysis will consist of three subsystem as seen in \autoref{fig:signal_analysis_fig}. The signal analysis consist both of an analysis in the time domain and frequency domain.
 
 \begin{figure}[H]
 \centering
@@ -39,8 +39,7 @@ Using a spectrum analyser as a part of the signal analysis may be useful since t
 \label{fig:signal_analysis_fig}
 \end{figure}
 
-
-% Signal analysis in frequency domain
+The time domain analysis is the "Peak lvl threshold" that examine if the input signal exceed a certain level setted by a threshold. If signal exceeds the threshold a spectrum analysis is used to further analyse the signal. The spectrum analysis will help reveal the amount of low energy in the signal. A model will help determine how the system should process the audio signal in order to optimize the performance. The model of the signal analysis will be based on a second test of the DALI \autoref{app:journal_speaker_test2}. The model is yet to be specified.
 
 
 
